# dpu

./: .gitmodules  Cargo.toml  LICENSE.md  README.md  script.sh  setup_env.sh
common/psa-attestation/: Cargo.toml
common/psa-attestation/c_src/: Makefile
common/transport/: Cargo.toml
common/transport/src/: dpu_messages.rs  fd.rs  lib.rs  messages.rs  runtime_manager_messages.rs  session.rs  tcp.rs  tls.rs  tls_client.rs  tls_server.rs
common/utils/: Cargo.toml
common/utils/src/: attestation.rs
docker/: 1000-use-local-parsec-client.patch  Dockerfile  Makefile
docker/attested-tls/: Makefile  demo.env  docker-compose.yml
docker/attested-tls/attester/: attester.Dockerfile  endorse.sh
docker/attested-tls/relying-party/: relying-party.Dockerfile
dpu/dpu-runtime-manager/: Cargo.toml
dpu/dpu-runtime-manager/src/: dpu_runtime.rs  main.rs
host/dpu-client/: Cargo.toml
host/dpu-client/src/: attestation.rs
host/examples/attestation/: Cargo.toml
host/examples/attestation/src/: main.rs
host/examples/parsec_execute/: Cargo.toml
host/examples/parsec_execute/src/: main.rs
host/examples/provision_execute/: Cargo.toml
host/examples/provision_execute/src/: main.rs
