[package]
authors = ["The Veracruz Development Team"]
description = "The transport protocol between host and DPU."
name = "transport"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1"
bincode = { version = "1.2.1", default-features = false }
byteorder = { version = "1.4.3" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4.13"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4.1", features = ["serde"] }
