[package]
authors = ["The Veracruz Development Team"]
description = "The transport protocol between host and DPU."
name = "transport"
version = "0.1.0"
edition = "2018"

[features]
default = []
initiator = [
    "ear",
    "jsonwebtoken",
    "veraison-apiclient"
]
responder = [
    "parsec-client",
    "parsec-se-driver",
]

[dependencies]
anyhow = "1"
bincode = { version = "1.2.1", default-features = false }
byteorder = { version = "1.4.3" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4.13"
mbedtls = { git = "https://github.com/gbryant-arm/rust-mbedtls", branch = "attested-tls", features = ["std", "aesni", "padlock", "tls13", "debug"] }
mbedtls-sys-auto = { git = "https://github.com/gbryant-arm/rust-mbedtls", branch = "attested-tls" }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4.1", features = ["serde"] }

# Initiator
ear = { git = "https://github.com/veraison/rust-ear", optional = true }
jsonwebtoken = { version = "9", optional = true }
veraison-apiclient = { git = "https://github.com/veraison/rust-apiclient", optional = true }

# Responder
parsec-client = { git = "https://github.com/parallaxsecond/parsec-client-rust", optional = true }
parsec-se-driver = { git = "https://github.com/ionut-arm/parsec-se-driver", branch = "attested-tls", optional = true }