[package]
authors = ["The Veracruz Development Team"]
description = "DPU client."
name = "dpu-client"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.14"
log = "0.4.13"
#proxy-attestation-client = { git = "https://github.com/veracruz-project/proxy-attestation-client", tag = "v0.2" }
proxy-attestation-client = { path = "../proxy-attestation-client" }
transport = { path = "../../common/transport" }