[package]
authors = ["The Veracruz Development Team"]
description = "DPU client."
name = "dpu-client"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.14"
log = "0.4.13"
proxy-attestation-client = { git = "https://github.com/gbryant-arm/proxy-attestation-client", branch = "gbryant/base64-0.21" }
transport = { path = "../../common/transport" }
